--- a/Vue/vueConnexion.twig
+++ b/Vue/vueConnexion.twig
@@ -5,16 +5,13 @@
 {% endblock %}
 
 {% block title %}
-    Convocations sportives - Se Connecter
+    Convocations sportives - Se connecter
 {% endblock %}
 
 {% block contenu %}
-
-{############# CONNEXION #############}
-
 <div class="row mt-5">
     <div class="col-6">
-        <h1>Se connecter</h1>
+        <h1 class="mb-3">Se connecter</h1>
         <div class="card">
             <div class="card-body">
                 {% if erreurs %}
@@ -33,9 +30,9 @@
                     <div class="form-group row mt-2">
                         <label for="password" class="col-3 col-form-label">Mot de passe</label>
                         <div class="col">
-                            <input type="password" name="mdp" class="form-control" id="password" placeholder="Mot de Passe">
+                            <input type="password" name="mdp" class="form-control" id="password" placeholder="Mot de passe">
                         </div>
-                        <div class="form-group row mt-2 justify-content-center">
+                        <div class="form-group row mt-3 justify-content-center">
                             <button type="submit" class="btn btn-primary col-5">Se connecter</button>
                         </div>
                     </div>
@@ -45,12 +42,12 @@
     </div>
 
     <div class="offset-1 col-5">
-        <h1>Utilisateurs</h1>
+        <h1 class="mb-3">Utilisateurs</h1>
         <table class="table border table-striped table-hover">
             <thead>
             <tr>
                 <th>Nom</th>
-                <th>Role</th>
+                <th>Rôle</th>
             </tr>
             </thead>
             <tbody>
@@ -70,27 +67,27 @@
 </div>
 
 
-<div class="row py-5">
+<div class="row py-5 mt-5">
     <div class="col-5">
         <h2>Vous êtes entraîneur :</h2>
         <div class="list-group mt-3">
-            <div class="list-group-item flex-column align-items-start">
+            <div class="list-group-item flex-column align-items-start border-2" style="border-color: #001D6E; border-bottom: #eeeeee">
                 <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">Gérer les convocations</h5>
+                    <h5 class="mb-1">Gérez les convocations</h5>
                 </div>
                 <p class="mb-1">Créez des convocation : convoquez vos joueurs pour un match parmi ceux proposés. Modifiez les ou supprimez celles que vous souhaitez. Publiez les ensuite pour les rendre accessibles par tous !</p>
             </div>
-            <div class="list-group-item flex-column align-items-start">
+            <div class="list-group-item flex-column align-items-start border-2" style="border-color: #eeeeee">
                 <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">Accéder aux absences</h5>
+                    <h5 class="mb-1">Accédez aux absences</h5>
                 </div>
-                <p class="mb-1">Suivez les absences de vos joueurs et adapter vos équipes en fonction.</p>
+                <p class="mb-1">Suivez les absences de vos joueurs et adapter vos compositions d'équipes en fonction des joueurs disponibles.</p>
             </div>
-            <div class="list-group-item flex-column align-items-start">
+            <div class="list-group-item flex-column align-items-start border-2" style="border-color: #D60920; border-top: #eeeeee">
                 <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">Accéder aux matchs programmés</h5>
+                    <h5 class="mb-1">Consultez les matchs programmés</h5>
                 </div>
-                <p class="mb-1">Prenez de l'avance en consultant les matchs à suivre, vos équipes mise en jeu ainsi que les dates de ces évènements.</p>
+                <p class="mb-1">Prenez de l'avance en consultant les matchs à suivre, vos équipes mises en jeu ainsi que les dates de ces évènements.</p>
             </div>
         </div>
     </div>
@@ -98,24 +95,24 @@
     <div class="offset-2 col-5">
         <h2>Vous êtes secrétaire :</h2>
         <div class="list-group mt-3">
-            <div class="list-group-item flex-column align-items-start">
+            <div class="list-group-item flex-column align-items-start border-2" style="border-color: #001D6E; border-bottom: #eeeeee;">
                 <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">Programmer des matchs</h5>
+                    <h5 class="mb-1">Administrez les joueurs</h5>
                 </div>
-                <p class="mb-1">Ajouter des matchs : les lieux, dates, heures, compétitions et équipes mises en jeu. Mettez à jour les matchs ou supprimez ceux qui ne sont plus d'actualité.</p>
+                <p class="mb-1">Gérez les inscriptions de joueurs, l'ajout de nouvelles licences ainsi que leur suppression.</p>
             </div>
-            <div class="list-group-item flex-column align-items-start">
+            <div class="list-group-item flex-column align-items-start border-2" style="border-color: #eeeeee">
                 <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">Gérer les absences</h5>
+                    <h5 class="mb-1">Gérez les absences</h5>
                 </div>
-                <p class="mb-1">Contrôlez les absences des joueurs du club, ceux-ci ne pourront pas être convoqués aux matchs.</p>
+                <p class="mb-1">Contrôlez les absences des joueurs du club, la date et le motif de l'absence en question. Les joueurs absents ne pourront pas être convoqués aux matchs se déroulant le même jour.</p>
             </div>
-            <div class="list-group-item flex-column align-items-start">
+            <div class="list-group-item flex-column align-items-start border-2" style="border-color: #D60920; border-top: #eeeeee">
                 <div class="d-flex w-100 justify-content-between">
-                    <h5 class="mb-1">Administrer les joueurs</h5>
+                    <h5 class="mb-1">Programmez des matchs</h5>
                 </div>
-                <p class="mb-1">Gérez les inscriptions de joueurs, l'ajout de nouvelles licences ou leur suppression.</p>
-            </div>
+            <p class="mb-1">Ajouter des matchs : les lieux, dates, heures, compétitions et équipes mises en jeu. Mettez à jour les matchs ou supprimez ceux qui ne sont plus d'actualité.</p>
+        </div>
         </div>
     </div>
 </div>
