--- a/Vue/vueErreur.twig
+++ b/Vue/vueErreur.twig
@@ -5,14 +5,7 @@
 {% endblock %}
 
 {% block contenu %}
-
-{############# ERREUR #############}
 <div class="alert alert-danger alert-dismissible fade show mt-5" role="alert">
-    <strong>ERREUR :</strong> <br>
-    Une erreur est survenue
-    <br>
-    {{ msgErreur }}
+    <strong>ERREUR :</strong> {{ msgErreur }}
 </div>
-
-
 {% endblock %}
