--- a/Vue/vueAccueil.twig
+++ b/Vue/vueAccueil.twig
@@ -2,177 +2,44 @@
 
 
 {% block title %}
-    Convocations sportives
+    Convocations sportives - Accueil
 {% endblock %}
 
 {% block contenu %}
-
-{############# CATEGORIE #############}
-<!--
-<div class="row pt-5">
-    <div class="col-6">
-        <h1>Catégories</h1>
-        <table class="table border table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>Nom</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                <?php foreach ($categories as $categorie): ?>
-                <tr>
-                    <td><?= $categorie['Nom'] ?></td>
-                    <td><form method="post" action="index.php?action=supprimerCategorie">
-                            <input type="hidden" name="nom" value="<?= $categorie['Nom'] ?>" />
-                            <button type="submit" class="btn btn-danger"><i class="fa fa-times"></i></button>
-                        </form></td>
-                </tr>
-                <?php endforeach; ?>
-            </tbody>
-        </table>
+<div class="col py-5">
+    <div class="bs-callout" style="border-left-color: #001D6E">
+        Bienvenue sur ce site de convocations sportives !<br>
+        Consultez les différentes convocations publiées et suivez de près les matchs à venir.
     </div>
-
-    <div class="offset-1 col-5">
-        <h1>Ajouter une catégorie</h1>
-        <form method="post" action="index.php?action=ajouterCategorie">
-            <div class="form-group row">
-                <label for="nomCategorie" class="col-3 form-label">Catégorie : </label>
-                <div class="col-5">
-                    <input type="text" name="nom" id="nomCategorie" class="form-control" required>
-                </div>
-            </div>
-            <div class="form-group row mt-2">
-                <button type="submit" class="btn btn-primary col-5">Ajouter</button>
-            </div>
-        </form>
+    <div class="bs-callout" style="border-left-color: #eeeeee">
+        Connectez-vous pour acceder aux effectifs des joueurs du club, aux absences, aux matchs de la saison.
+    </div>
+    <div class="bs-callout" style="border-left-color: #D60920">
+        Composez vos équipes, éditez et publiez les convocations, gérez les modalités de matchs en fonction selon votre poste.
     </div>
 </div>
--->
 
-{############# COMPETITION #############}
-<!--
-<div class="row pt-5">
-    <div class="col-6">
-        <h1>Compétitions</h1>
-        <table class="table border table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>Nom</th>
-                    <th>Action</th>
-                </tr>
-            <thead>
-            <tbody>
-                <?php foreach ($competitions as $competition): ?>
-                    <tr>
-                        <td><?= $competition['Nom'] ?></td>
-                        <td><form method="post" action="index.php?action=supprimerCompetition">
-                                <input type="hidden" name="nom" value="<?= $competition['Nom'] ?>" />
-                                <button type="submit" class="btn btn-danger"><i class="fa fa-times"></i></button>
-                            </form></td>
-                    </tr>
-                <?php endforeach; ?>
-            </tbody>
-        </table>
-    </div>
-    <div class="offset-1 col-5">
-        <h1>Ajouter une compétition</h1>
-        <form method="post" action="index.php?action=ajouterCompetition">
-            <div class="form-group form-inline row">
-                <label for="nomCompetition" class="col-3 form-label">Compétition : </label>
-                <div class="col-5">
-                    <input type="text" name="nom" id="nomCompetition" class="form-control" required>
-                </div>
-            </div>
-            <div class="form-group row mt-2">
-                <button type="submit" class="btn btn-primary col-5">Ajouter</button>
-            </div>
-        </form>
-    </div>
-</div>
--->
-
-
-{############# EQUIPES #############}
-<!--
-<div class="row pt-5">
-    <div class="col-6">
-        <h1>Équipes</h1>
-        <table  class="table border table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>Nom</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                <?php foreach ($equipes as $equipe): ?>
-                    <tr>
-                        <td><?= $equipe['Nom'] ?></td>
-                        <td><form method="post" action="index.php?action=supprimerEquipe">
-                                <input type="hidden" name="nom" value="<?= $equipe['Nom'] ?>" />
-                                <button type="submit" class="btn btn-danger"><i class="fa fa-times"></i></button>
-                            </form></td>
-                    </tr>
-                <?php endforeach; ?>
-            </tbody>
-        </table>
-    </div>
-    <div class="offset-1 col-5">
-        <h1>Ajouter une équipe</h1>
-        <form method="post" action="index.php?action=ajouterEquipe">
-            <div class="form-group row">
-                <label for="nomEquipe" class="col-3 form-label">Equipe : </label>
-                <div class="col-5">
-                    <input type="text" name="nom" id="nomEquipe" class="form-control" required>
-                </div>
-                <div class="form-group row mt-2">
-                    <button type="submit" class="btn btn-primary col-5">Ajouter</button>
-                </div>
-        </form>
-    </div>
-</div>
--->
-
-
-
-{############# CONVOCATION #############}
-{% if erreurs %}
-    <div class="alert alert-danger alert-dismissible fade show mb-3" role="alert">
-        <strong>Une erreur est survenue :</strong> {{ erreurs }}
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-{% endif %}
-
-<div class="bs-callout" style="border-left-color: #001D6E">
-    Bienvenue sur ce site de convocations sportives
-</div>
-<div class="bs-callout" style="border-left-color: #eeeeee">
-    Consultez les matchs prévus
-</div>
-<div class="bs-callout" style="border-left-color: darkred">
-    Composez vos équipes et publiez les convocations
-</div>
 
 <div class="row pt-5">
     <div class="row">
-        <h1 class="col-5">Convocations Publiées</h1>
+        <h1 class="col-5">Convocations publiées</h1>
         <div class="alert alert-info alert-dismissible fade show col-6" role="alert">
-            <strong>Note:</strong> Cliquez sur l'intitulé d'une convocation pour acceder aux informations la concernant.
+            <strong>Note :</strong> Cliquez sur l'intitulé d'une convocation pour acceder aux informations la concernant.
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
+
     </div>
-    <div class="col-6">
+    <div class="col-8">
         <table class="table border table-striped table-hover">
 
             {% for convocationPubliee in convocationsPubliees %}
                 <tr>
-                    <td><a href="index.php?action=informationsConvocation&num={{ convocationPubliee['NumConvoc'] }}" class="btn" role="button" style="text-align: left; width: 100%">
-                            {{ convocationPubliee['Competition'] }} - {{ convocationPubliee['Equipe'] }} (le {{ convocationPubliee['Date']|date("d/m/Y") }})</a></td>
+                    <td><a href="index.php?action=informationsConvocation&num={{ convocationPubliee['NumConvoc'] }}" class="btn text-center" role="button" style="text-align: left; width: 100%">
+                            {{ convocationPubliee['Equipe'] }} (le {{ convocationPubliee['Date']|date("d/m/Y") }}) - {{ convocationPubliee['Competition'] }} à {{ convocationPubliee['Site'] }}</a></td>
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="5" class="text-center">Aucune Convocation</td>
+                    <td colspan="5" class="text-center">Aucune convocation n'a été publiée</td>
                 </tr>
             {% endfor %}
         </table>
